--- a/pallets/non-fungible-token/Cargo.toml
+++ b/pallets/non-fungible-token/Cargo.toml
@@ -13,6 +13,9 @@ repository = "https://github.com/substrate-developer-hub/substrate-node-template
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+#blas-src = { version = "*", features = ["openblas"] }
+#openblas-src = { version = "*", features = ["static"] }
+#ndarray-linalg = "0.12"
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive",] }
 enumflags2 = { version = "0.7.5" }
 log = { version = "0.4.17", default-features = false }
@@ -21,6 +24,8 @@ frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional
 frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+
 
 [dev-dependencies]
 sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
