--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -49,7 +49,7 @@ frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, g
 
 # Local Dependencies
 pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
-pallet-nfts = { version = "4.0.0-dev", default-features = false, path = "../pallets/non-fungible-token" }
+pallet-nfts = { version = "4.0.0-dev", default-features = false, path = "../pallets/nfts" }
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master" }
@@ -58,8 +58,8 @@ substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/pari
 default = ["std"]
 std = [
 	"frame-try-runtime?/std",
-	#"frame-system-benchmarking?/std",
-	#"frame-benchmarking?/std",
+	"frame-system-benchmarking?/std",
+	"frame-benchmarking?/std",
 	"codec/std",
 	"scale-info/std",
 	"frame-executive/std",
